--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,5 +7,10 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+    <style name="floatinghint" parent="android:style/TextAppearance">
+        <item name = "android:textColor"> @color/colorAccent
+        </item>
+    </style>
+
 
 </resources>
